# autorun

./: pyproject.toml
src/autorun/: __init__.py
src/autorunpy/: auto.py  make_venv.py
