[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorun"
version = "0.0.1"
authors = [{ name = "Mahdi Mir", email = "imahdimir@gmail.com" }]
description = "Tools for auto running python scripts"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/imahdimir/autorun"
"Bug Tracker" = "https://github.com/imahdimir/autorun/issues"
